video corruption in 2.2.git with DXVA
Certain f4v videos do not play properly in VLC 2.2.git (compiled vlc-2.2.0 branch as of 6/27/2014, also tested against vlc 2.2 and 3.0 nightlies from 6/29/2014) when DXVA acceleration is enabled. There is frequent flashing of solid green as if the buffer is getting reset. DXVA disabled works fine. This is with either 20140121 or 20140507(latest) contribs.
Debug output repeatedly shows "direct3d debug: Reusing 483x47 texture for OSD" especially at beginning of video and after seek.
Windows 7 64-bit running 32-bit VLC Intel HD Graphics 4000
Other versions of VLC tested: VLC 2.1.1: works VLC 2.1.2, 2.1.3 are slightly broken: only after excessive seeking and without green flashing; this video corruption remains in 2.2.git VLC 2.1.git compiled with mingw32 contrib bundle i686-w64-mingw32: -20131111 works -20140114 not tested -20140121 works -20140202 luac is 64-bit binary, cannot compile -20140415 not tested -20140421, 20140506, 20140507(latest) broken same as 2.1.2 and 2.1.3