DxVA2: fix compatibility with avcodec frame multithreading

Fixes #11693
Disable thread_safe_callbacks when we detect DXVA2 might be used

--
the p_va of the decoder is not affected, a dummy p_va is used

the decoding issues appeared on Intel HD Graphics 4000 hardware